--- a/src/AutumnBox.GUI/AutumnBox.GUI.csproj
+++ b/src/AutumnBox.GUI/AutumnBox.GUI.csproj
@@ -14,6 +14,7 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
     <Configurations>Debug;Release;Canary</Configurations>
     <FileVersion>2021.2.22.0</FileVersion>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
